--- a/turn.html
+++ b/turn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JWT Generator</title>
+    <title>Turn JWT Generator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/10.5.1/jsrsasign-all-min.js"></script>
     <style>
         body {
@@ -96,11 +96,18 @@
         .copy-button:hover {
             background-color: #0056b3;
         }
+        .curl-command {
+            margin-top: 1rem;
+            height: 80px;
+            resize: none;
+            font-family: monospace;
+            white-space: pre-wrap;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>JWT Generator</h1>
+        <h1>Turn JWT Generator</h1>
         <div class="form-group">
             <label for="version">Version:</label>
             <input type="text" id="version" value="1.0" disabled>
@@ -134,6 +141,16 @@
             <textarea id="jwtToken" readonly></textarea>
             <button class="copy-button" onclick="copyJWT()">Copy</button>
         </div>
+        <!-- Add this after the JWT Token section -->
+        <div class="form-group">
+            <div class="copy-container">
+                <label for="curlCommand">cURL Command:</label>
+            </div>
+            <textarea id="curlCommand" readonly class="curl-command"></textarea>
+            <button class="copy-button" onclick="copyToClipboard('curlCommand')">Copy</button>
+        </div>
+    
+    </div>
     </div>
 
     <script>
@@ -194,6 +211,10 @@
                 const token = `${unsignedToken}.${signatureEncoded}`;
                 
                 document.getElementById('jwtToken').value = token;
+
+                // In the generateJWT function, add this after setting the token value:
+                document.getElementById('curlCommand').value = 
+                    `curl -X GET "https://http-global-turn.ap.staging-1-ali.myagoralab.com/globalturn" -H "Authorization: Bearer ${token}"`;
             } catch (error) {
                 alert(`Error: ${error.message}`);
             }
@@ -221,6 +242,17 @@
             }
         }
 
+        // Replace the copyJWT function with this generic version:
+        function copyToClipboard(elementId) {
+            const element = document.getElementById(elementId);
+            if (element.value) {
+                element.select();
+                document.execCommand('copy');
+                alert('Copied to clipboard!');
+            } else {
+                alert('Nothing to copy');
+            }
+        }
     </script>
 </body>
 </html>
