--- a/turn.html
+++ b/turn.html
@@ -138,7 +138,7 @@
             <div class="copy-container">
                 <label for="jwtToken">JWT Token:</label>
             </div>
-            <textarea id="jwtToken" readonly></textarea>
+            <textarea id="jwtToken" readonly disabled></textarea>
             <button class="copy-button" onclick="copyJWT()">Copy</button>
         </div>
         <!-- Add this after the JWT Token section -->
@@ -146,7 +146,7 @@
             <div class="copy-container">
                 <label for="curlCommand">cURL Command:</label>
             </div>
-            <textarea id="curlCommand" readonly class="curl-command"></textarea>
+            <textarea id="curlCommand" readonly disabled class="curl-command"></textarea>
             <button class="copy-button" onclick="copyToClipboard('curlCommand')">Copy</button>
         </div>
     
