--- a/turn.html
+++ b/turn.html
@@ -146,7 +146,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="showTab('jwt-tab')">
     <div class="tabs">
         <button class="tab-button active" onclick="showTab('jwt-tab')">JWT Generator</button>
         <button class="tab-button" onclick="showTab('webrtc-tab')">WebRTC Test</button>
