--- a/turn.html
+++ b/turn.html
@@ -6,14 +6,46 @@
     <title>Turn JWT Generator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/10.5.1/jsrsasign-all-min.js"></script>
     <style>
-       body {
+        body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            height: 100vh;
+        }
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 200px;
+            background: white;
+            padding: 1rem;
+            box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+        }
+        .tab-button {
+            padding: 0.75rem 1.5rem;
+            background-color: #e0e0e0;
+            color: #333;
+            border: none;
+            border-radius: 4px;
+            margin-bottom: 1rem;
+        }
+        .tab-button.active {
+            background-color: #007bff;
+            color: white;
+        }
+        .main-content {
+            margin-left: 220px;
+            width: calc(100% - 220px);
+            display: flex;
+            justify-content: center;
+            align-items: flex-start; /* Adjust alignment to start from the top */
+            padding: 1rem; /* Add some padding for better spacing */
+            overflow-y: auto; /* Add scrollbar if content overflows */
         }
         .container {
             background-color: #ffffff;
@@ -21,7 +53,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 100%;
-            max-width: 400px;
+            max-width: 800px;
         }
         h1 {
             text-align: center;
@@ -104,27 +136,6 @@
         textarea {
             background-color: #e9e9e9;
         }
-        .tabs {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: white;
-            padding: 1rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-        }
-        .tab-button {
-            padding: 0.75rem 1.5rem;
-            background-color: #e0e0e0;
-            color: #333;
-            border: none;
-            border-radius: 4px;
-        }
-        .tab-button.active {
-            background-color: #007bff;
-            color: white;
-        }
         .tab-content {
             display: none;
         }
@@ -155,78 +166,79 @@
     </style>
 </head>
 <body onload="showTab('jwt-tab')">
-    <div class="tabs">
+    <div class="sidebar">
         <button class="tab-button active" onclick="showTab('jwt-tab')">JWT Generator</button>
         <button class="tab-button" onclick="showTab('webrtc-tab')">WebRTC Test</button>
     </div>
-    <div class="container">
-        <div id="jwt-tab" class="tab-content">
-            <h1>Turn JWT Generator</h1>
-            <div class="form-group">
-                <label for="version">Version:</label>
-                <input type="text" id="version" value="1.0" disabled>
-            </div>
-            <div class="form-group">
-                <label for="appID">App ID:</label>
-                <input type="text" id="appID" value="">
-            </div>
-            <div class="form-group">
-                <label for="exp">Exp:</label>
-                <input type="text" id="exp" value="">
-                <div class="time-buttons">
-                    <button onclick="addTime(0)">Get Current Time</button>
-                    <button onclick="addTime(30)">+30s</button>
-                    <button onclick="addTime(60)">+1m</button>
-                    <button onclick="addTime(300)">+5m</button>
-                    <button onclick="addTime(600)">+10m</button>
-                    <button onclick="addTime(3600)">+1h</button>
+    <div class="main-content">
+        <div class="container">
+            <div id="jwt-tab" class="tab-content">
+                <h1>Turn JWT Generator</h1>
+                <div class="form-group">
+                    <label for="version">Version:</label>
+                    <input type="text" id="version" value="1.0" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="appID">App ID:</label>
+                    <input type="text" id="appID" value="">
+                </div>
+                <div class="form-group">
+                    <label for="exp">Exp:</label>
+                    <input type="text" id="exp" value="">
+                    <div class="time-buttons">
+                        <button onclick="addTime(0)">Get Current Time</button>
+                        <button onclick="addTime(30)">+30s</button>
+                        <button onclick="addTime(60)">+1m</button>
+                        <button onclick="addTime(300)">+5m</button>
+                        <button onclick="addTime(600)">+10m</button>
+                        <button onclick="addTime(3600)">+1h</button>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="secret">Secret:</label>
+                    <input type="text" id="secret" value="">
+                </div>
+                <button id="generateJWT" onclick="generateJWT()">Generate JWT</button>
+                <br>
+                <div class="form-group">
+                    <div class="copy-container">
+                        <label for="jwtToken">JWT Token:</label>
+                    </div>
+                    <textarea id="jwtToken" readonly></textarea>
+                    <button class="copy-button" onclick="copyJWT()">Copy</button>
+                </div>
+                <!-- Add this after the JWT Token section -->
+                <div class="form-group">
+                    <div class="copy-container">
+                        <label for="curlCommand">cURL Command:</label>
+                    </div>
+                    <textarea id="curlCommand" readonly class="curl-command"></textarea>
+                    <button class="copy-button" onclick="copyToClipboard('curlCommand')">Copy</button>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="secret">Secret:</label>
-                <input type="text" id="secret" value="">
-            </div>
-            <button id="generateJWT" onclick="generateJWT()">Generate JWT</button>
-            <br>
-            <div class="form-group">
-                <div class="copy-container">
-                    <label for="jwtToken">JWT Token:</label>
+            <div id="webrtc-tab" class="tab-content">
+                <h1>WebRTC ICE Server Test</h1>
+                <div class="form-group">
+                    <label for="webrtc-config">Paste WebRTC Config JSON:</label>
+                    <textarea id="webrtc-config" rows="10" placeholder='{"iceServers": [{"urls": "stun:example.com"}]}'></textarea>
                 </div>
-                <textarea id="jwtToken" readonly></textarea>
-                <button class="copy-button" onclick="copyJWT()">Copy</button>
+                <button onclick="testWebRTCConfig()">Test ICE Servers</button>
+                <button onclick="startCall()">Start Call</button>
+                <button onclick="hangupCall()">Hangup Call</button>
+                <div id="webrtc-test-result" class="test-result"></div>
+                <table id="candidate-table">
+                    <thead>
+                        <tr>
+                            <th>Candidate Type</th>
+                            <th>IP Address</th>
+                            <th>Port</th>
+                        </tr>
+                    </thead>
+                    <tbody id="candidate-table-body"></tbody>
+                </table>
+                <video id="localVideo" autoplay muted></video>
+                <video id="remoteVideo" autoplay></video>
             </div>
-            <!-- Add this after the JWT Token section -->
-            <div class="form-group">
-                <div class="copy-container">
-                    <label for="curlCommand">cURL Command:</label>
-                </div>
-                <textarea id="curlCommand" readonly class="curl-command"></textarea>
-                <button class="copy-button" onclick="copyToClipboard('curlCommand')">Copy</button>
-            </div>
-        </div>
-        <div id="webrtc-tab" class="tab-content" style="display: none;">
-            <h1>WebRTC ICE Server Test</h1>
-            <div class="form-group">
-                <label for="webrtc-config">Paste WebRTC Config JSON:</label>
-                <textarea id="webrtc-config" rows="10" placeholder='{"iceServers": [{"urls": "stun:example.com"}]}'></textarea>
-            </div>
-            <button onclick="testWebRTCConfig()">Test ICE Servers</button>
-            <button onclick="startCall()">Start Call</button>
-            <!-- Add hangup button -->
-            <button onclick="hangupCall()">Hangup Call</button>
-            <div id="webrtc-test-result" class="test-result"></div>
-            <table id="candidate-table">
-                <thead>
-                    <tr>
-                        <th>Candidate Type</th>
-                        <th>IP Address</th>
-                        <th>Port</th>
-                    </tr>
-                </thead>
-                <tbody id="candidate-table-body"></tbody>
-            </table>
-            <video id="localVideo" autoplay muted></video>
-            <video id="remoteVideo" autoplay></video>
         </div>
     </div>
 
