--- a/conference.html
+++ b/conference.html
@@ -75,10 +75,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 120px;
-            height: 120px;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
-            font-size: 12px;
+            font-size: 12px;  /* 从12px缩小到8px */
             font-weight: 500;
             color: #fff;
             background: linear-gradient(135deg, #6366f1, #8b5cf6);
@@ -88,6 +88,7 @@
         .main-video .user-id {
             width: 200px;
             height: 200px;
+            font-size: 15px; /* 新增字体大小设置 */
         }
 
         .user-id.host {
