--- a/test_turn.html
+++ b/test_turn.html
@@ -521,11 +521,11 @@
                     "TCP3478": [{ urls: 'turn:128.14.247.139:3478?transport=tcp', credential: turnCred, username: turnUser }]
                 },
                 "EastAsia": {
-                    "TLS443COM": [{ urls: 'turns:183-131-160-209.edge.staging-1-aws.myagoralab.com:4430?transport=tcp', credential: turnCred, username: turnUser }],
-                    "TLS443IO": [{ urls: 'turns:183-131-160-209.edge.staging-1-aws.myagoralab.com:4430?transport=tcp', credential: turnCred, username: turnUser }],
-                    "UDP443": [{ urls: 'turn:183.131.160.209:4430?transport=udp', credential: turnCred, username: turnUser }],
-                    "UDP3478": [{ urls: 'turn:183.131.160.209:3478?transport=udp', credential: turnCred, username: turnUser }],
-                    "TCP3478": [{ urls: 'turn:183.131.160.209:3478?transport=tcp', credential: turnCred, username: turnUser }]
+                    "TLS443COM": [{ urls: 'turns:164-52-24-43.edge.sd-rtn.com:443?transport=tcp', credential: turnCred, username: turnUser }],
+                    "TLS443IO": [{ urls: 'turns:164-52-24-43.edge.agora.io:443?transport=tcp', credential: turnCred, username: turnUser }],
+                    "UDP443": [{ urls: 'turn:164.52.24.43:443?transport=udp', credential: turnCred, username: turnUser }],
+                    "UDP3478": [{ urls: 'turn:164.52.24.43:3478?transport=udp', credential: turnCred, username: turnUser }],
+                    "TCP3478": [{ urls: 'turn:164.52.24.43:3478?transport=tcp', credential: turnCred, username: turnUser }]
                 }
             };
 
