--- a/webdemo/basicVideoCall/index.html
+++ b/webdemo/basicVideoCall/index.html
@@ -177,6 +177,8 @@
             </div>
           </div>
         </div>
+
+        <input type="checkbox" id="mute"><span>&nbsp;Mute</span>
       </div>
     </form>
 
