--- a/webrtc_pcdn/public/index.html
+++ b/webrtc_pcdn/public/index.html
@@ -303,7 +303,7 @@ video { width: 100%; border-radius: 6px; background: #000; }
 <!-- Reaction floats -->
 <div class="reaction-float" id="reactionFloat"></div>
 
-<script src="/socket.io/socket.io.js"></script>
+<script src="/socket.io.min.js"></script>
 <script>
 // ============================================================
 // State
